--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ h1 {
     font-size: 14px;
 }
 
+.hamburger_icon {
+    float: right;
+    line-height: 40px;
+    font-size: 25px;
+}
 
 /* JUMBOTRON ------------------ */
 .header_top {
@@ -84,8 +89,14 @@ h1 {
 
 .jumbotron_bg {
     width: 100vw;
-    height: 350px;
+    min-height: 350px;
     background-color: antiquewhite;
+}
+
+.jumbotron_bg::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 /* BOX ACCOUNT */
