--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ form ul li {
 .partners {
     width: 100vw;   
     min-height: 200px;
-    background-color: lightgray;
+    background-color: #F3F5F9;
     padding: 20px;
 }
 
