--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ form ul li {
     width: 100vw;
     min-height: 200px;
     background-color: darkblue;
+    padding: 20px 0;
 }
 
 .section_6::after {
@@ -283,4 +284,12 @@ form ul li {
     border-radius: 5px;
     margin: auto;
     font-weight: bold;
+}
+
+/* FOOTER ------------------------- */
+
+.box_footer {
+    width: 100vw;
+    min-height: 300px;
+    background-color: dodgerblue;
 }
