--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,14 @@ body {
     color: #fff;
 }
 
+.gr {
+    color: gray;
+}
+
+.bold {
+    font-weight: bold;
+}
+
 .txt_cntr {
     text-align: center;
 }
@@ -290,6 +298,38 @@ form ul li {
 
 .box_footer {
     width: 100vw;
-    min-height: 300px;
-    background-color: dodgerblue;
+    min-height: 450px;
+    background-color: #010E28;
+    color: #fff;
+}
+
+.pink {
+    height: 400px;
+    
+    border: 1px solid #000;
+}
+
+.copyright {
+    padding: 40px 0;
+}
+
+.social {
+    float: left;
+}
+
+.social li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 5px;
+}
+
+.link_utili {
+    padding: 60px 0;
+}
+
+.link_utili li {
+    width: 120px;
+    list-style: none;
+    font-size: 12px;
+    padding: 5px 0;
 }
