--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,20 @@ body {
     border: 1px solid #000;
 }
 
+.bl {
+    color: #031B4E;
+}
+
 .wh {
     color: #fff;
 }
 
 .gr {
     color: gray;
+}
+
+.light_bl {
+    color: #0069FF;
 }
 
 .bold {
@@ -106,7 +114,7 @@ h1 {
 .jumbotron_bg {
     width: 100vw;
     min-height: 350px;
-    background-color: antiquewhite;
+    background-color: dodgerblue;
     padding: 20px;
 }
 
@@ -122,6 +130,11 @@ h1 {
     height: 200px;
     background-color: #fff;
     border-radius: 10px;
+    padding: 15px;
+}
+
+.create_acc_form ul {
+    padding: 0;
 }
 
 form ul li {
