--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,7 @@ body {
     font-family: 'Roboto', sans-serif
 }
 
-.wrapper {
-    max-width: 900px;
-    margin: auto;
-}
-
+/* CLASSI GENERICHE --------- */
 
 .blue {
     background-color: blue;
@@ -79,6 +75,37 @@ body {
     line-height: 25px;
 }
 
+.up_case {
+    text-transform: uppercase;
+}
+
+.dec_none:hover {
+    text-decoration: none;
+}
+
+.h_300 {
+    height: 300px;
+    border: 1px solid #000;
+}
+
+.h_25 {
+    height: 25px;
+}
+
+.pad_10 {
+    padding: 0 10px;
+}
+
+.pad_30 {
+    padding: 30px 0;
+}
+
+/* /CLASSI GENERICHE ---------- */
+
+
+
+/* NAV BAR -------------------- */
+
 .menu_left {
     padding: 0 0 0 140px;
 }
@@ -118,7 +145,9 @@ h1 {
     font-size: 25px;
 }
 
+
 /* JUMBOTRON ------------------ */
+
 .header_top {
     height: 40px;
 }
@@ -139,6 +168,7 @@ h1 {
 .pad_jumbo {
     padding: 0 20px;    
 }
+
 
 /* BOX ACCOUNT */
 
@@ -204,6 +234,7 @@ form ul li {
     border: none;
 }
 
+
 /* DIV PARTNERS */ 
 
 .partners {
@@ -218,6 +249,7 @@ form ul li {
     display: block;
     clear: both;
 }
+
 
 /* SECTION_1 */
 
@@ -258,15 +290,6 @@ form ul li {
     top: 50%;
     left: 20%;
     transform: translate(-50%, -50%);
-}
-
-.h_300 {
-    height: 300px;
-    border: 1px solid #000;
-}
-
-.h_25 {
-    height: 25px;
 }
 
 .pallini {
@@ -322,9 +345,6 @@ form ul li {
     border-bottom: 1px solid #fff;
 }
 
-.pad_10 {
-    padding: 0 10px;
-}
 
 /* SECTION_5 */
 
