--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif
+    font-family: 'Roboto', sans-serif;
 }
 
 /* CLASSI GENERICHE --------- */
@@ -10,9 +10,9 @@ body {
 }
 
 .red {
-    background-color: red;
+    background-color: transparent;
     height: 50px;
-    border: 1px solid #000;
+    position: relative;
 }
 
 .green {
@@ -166,7 +166,7 @@ h1 {
 }
 
 .pad_jumbo {
-    padding: 0 20px;    
+    padding: 0 20px; 
 }
 
 
@@ -250,6 +250,13 @@ form ul li {
     clear: both;
 }
 
+.img_partners {
+    height: 70px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 /* SECTION_1 */
 
