--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto','sans-serif';
 }
 
 /* CLASSI GENERICHE --------- */
@@ -71,8 +71,16 @@ body {
     font-size: 12px;
 }
 
+.f_size_14 {
+    font-size: 14px;
+}
+
 .l_height {
     line-height: 25px;
+}
+
+.l_height_22 {
+    line-height: 22px;
 }
 
 .up_case {
@@ -158,8 +166,9 @@ body {
 
 .hamburger_icon {
     float: right;
-    line-height: 40px;
-    font-size: 25px;
+    line-height: 50px;
+    font-size: 20px;
+    color: #0069FF; 
 }
 
 .arrow_down {
@@ -193,7 +202,7 @@ body {
 }
 
 .pad_jumbo {
-    padding: 0 20px; 
+    padding: 0 10px; 
     margin-top: 60px;
 }
 
@@ -202,10 +211,16 @@ body {
 
 .account {
     width: 100%;
-    height: 250px;
+    min-height: 250px;
     background-color: #fff;
     border-radius: 5px;
     padding: 15px;
+}
+
+.account::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .create_acc_form ul {
@@ -294,8 +309,8 @@ form ul li {
 
 .grey_list li {
     list-style: none;
-    border-left: 1.5px solid #748099;
-    padding: 8px 7px;
+    border-left: 1.5px solid #E5E8ED;
+    padding: 10px 0 10px 15px;
 }
 
 .grey_list a {
