--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,6 @@ body {
     font-size: 14px;
 }
 
-.f_size_tabella {
-    font-size: 12px;
-}
-
 .l_height {
     line-height: 25px;
 }
@@ -463,6 +459,10 @@ form ul li {
     border-bottom: 1px solid #fff;
 }
 
+.f_size_tabella {
+    font-size: 12px;
+}
+
 .aqua {
     color: aqua;
 }
@@ -489,9 +489,21 @@ form ul li {
 .schermata_sez_5 {
     width: 100%;
     height: 100%;
-    background-image: url(../img..)
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #fff;
+    position: relative;
+}
+
+.schermata_txt {
+    width: 100%;
+    height: 170px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.schermata_txt img {
+    width: 200px;
 }
 
 /* SECTION_6 */
